Rust/rust-tui-app/target/rls/debug/build/eyre-8506cad6d4e7048a/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /Users/kishore/Projects/Rust/rust-tui-app/target/rls/debug/build/eyre-8506cad6d4e7048a/out/probe.rs:2:16
  |
2 |     #![feature(backtrace)]
  |                ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
